--- a/GymSystemAAA/.classpath
+++ b/GymSystemAAA/.classpath
@@ -16,6 +16,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/org.restlet.lib.org.json-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/postgresql-9.4.1208.jar"/>
+	<classpathentry kind="lib" path="/home/marco/git/GymSystemTeam/GymSystemAAA/lib/postgresql-9.4.1208.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
